--- a/PropertEase/PropertEase.Application/PropertEase.Application.csproj
+++ b/PropertEase/PropertEase.Application/PropertEase.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
